<resources>

    <string name="account_my_collect">我的收藏</string>
    <string name="account_my_share">我的分享</string>
    <string name="account_my_coin">我的积分</string>
    <string name="account_my_comment">我的评论</string>
    <string name="account_my_reply">我的回答</string>
    <string name="account_coin_rank">积分排行榜</string>
    <string name="account_setting">设置</string>
    <string name="account_share_article">分享文章</string>
    <string name="account_username">用户名</string>
    <string name="account_profile">一名努力学习的菜鸟程序猿</string>

    <!-- login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_confirm">确认密码(注册需填写)</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="password_confirm_not_empty">确认密码不能为空</string>
    <string name="password_confirm_diff">确认密码不相同</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="password_length_short">密码长度不能小于6位</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="logout">退出登录</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="login_please_login">请先登录…</string>
    <string name="not_login">未登录</string>
    <string name="goto_login">点击登录</string>

    <!-- share -->
    <string name="share_article_title">分享文章</string>
    <string name="share_not_empty">分享链接不能为空</string>
    <string name="share_success">分享文章成功</string>
</resources>